--- a/overMij/index.html
+++ b/overMij/index.html
@@ -7,10 +7,16 @@
     <body>
         <div>
         <h1>Over mezelf</h1>
-        <p>Op deze pagina vertel ik iets over mijzelf.</p>
+        <p>Ik ben Leandero zit op het Augustinus.
+            Ik woon in Groningen en ik ben 16 jaar.
+        </p>
+        <p>ik heb 1 kat en een vogel ik vind mijn volgel een beetje gemen vaak zelfs.</p>
         <h2>Ik vertel hier over school</h2>
-        <p>Dit is school plaats</p>
-        <h3>Vrienden</h3>
+        <p>Ik zit op 4 Havo op het CSG augustinus. Ik ben van de Mavo afgekomen en ben doorgestroomt naar Havo</p>
+        <p></p>
+        <h2>Vrienden</h2>
+        <p>ik ben heel blij met mijn vrienden.Ik denk dat vrienden heel belangrijk zijn in het leven </p>
+        <p>ik hoop dat ik nog veel maak het leven zonder vrienden is denk ik gewoon echt zo saai</p>
         <img src="SCHOOL PIC.jpg">
         </div>
     </body>
