--- a/overMij/index.html
+++ b/overMij/index.html
@@ -10,14 +10,28 @@
         <p>Ik ben Leandero zit op het Augustinus.
             Ik woon in Groningen en ik ben 16 jaar.
         </p>
-        <p>ik heb 1 kat en een vogel ik vind mijn volgel een beetje gemen vaak zelfs.</p>
+        <p>ik heb 1 kat en een vogel ik vind mijn volgel een beetje gemeen vaak zelfs.</p>
         <h2>Ik vertel hier over school</h2>
         <p>Ik zit op 4 Havo op het CSG augustinus. Ik ben van de Mavo afgekomen en ben doorgestroomt naar Havo</p>
-        <p></p>
+        <p>ik hoop na de Havo naar de politieacademie te gaan,. ik vind school wel leuk maar zonder vrienden zou ik het niet
+            redden
+        </p>
         <h2>Vrienden</h2>
         <p>ik ben heel blij met mijn vrienden.Ik denk dat vrienden heel belangrijk zijn in het leven </p>
         <p>ik hoop dat ik nog veel maak het leven zonder vrienden is denk ik gewoon echt zo saai</p>
+        </div>
+        <div>
+        <h2>favoriete games</h2>
+        <ul>
+          <li>CSGO</li>  
+          <li>Battlefield V</li>
+          <li>Valorant</li>
+          <li>Phasmophobia</li>
+        </ul>
+        </div>
         <img src="SCHOOL PIC.jpg">
+        <h2>Mijn leuke game link</h2>
+        <a href="https://store.steampowered.com/app/739630/Phasmophobia/">Phasmophobia</a>
         </div>
     </body>
 </html>
