--- a/PO/index.html
+++ b/PO/index.html
@@ -9,7 +9,7 @@
         <div id="container">
             <h1>startpagina PO</h1>
             <img src="images/vogel.jpg" id="vogel" alt="dierentuinvogel"/>
-            <p>Hier maak je straks je PO.</p>
+            <p>DOMBO.</p>
         </div>
     </body>
 </html>
